dockerize the app and make role based access
