# routes/admin.routes.js
@@ -1,14 +1,16 @@
 const passport = require('passport');
-
+const { hasPermission } = require('../utils/role');
 const adminControllers = require('../controllers/admin.controllers');
 const express = require('express');
-
+const auth = require('../middlewares/auth');
 const app = express.Router();
 
 app.get(
-  '/get-new-users',
-  passport.authenticate('jwt', { session: false }),
+  '/get-all-users',
+  auth('getAllUsers'),
   adminControllers.getAllNewUser
 );
+
+app.get('/get-users-to-accept', auth('getUsersToAccept'), adminControllers.getUserToAccept);
 
 module.exports = app;
